little z-index fix

--- a/webapp/src/components/goals/styles/goals.scss
+++ b/webapp/src/components/goals/styles/goals.scss
@@ -18,6 +18,7 @@
   position: fixed;
   right: 21px; bottom: 21px;
   transition: all .2s ease-in-out;
+  z-index: 1;
 
   &:hover {
     transition: all .2s ease-in-out;
